Source/slurm-4503277.out
+ allCommand=
+ '[' 2 -gt 0 ']'
+ allCommand='  python3 '
+ shift
+ '[' 1 -gt 0 ']'
+ allCommand='   python3  comparison_gridworld.py '
+ shift
+ '[' 0 -gt 0 ']'
+ python3 comparison_gridworld.py
  File "comparison_gridworld.py", line 29
    np.random.shuffle(all_states))
                                 ^
SyntaxError: invalid syntax
